--- a/aula_03/exemplo01.html
+++ b/aula_03/exemplo01.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <form action="processa01.php" method="POST">
+    <form action="processa01.php" method="GET"> <!--$_POST => $_GET-->
         <h1>Cadastro</h1>
         <p>Digite seu nome: <input type="text" name="cxnome" id=""> </p>
         <p>Digite sua idade: <input type="text" name="cxidade" id=""> </p>
