--- a/aula_04/exerGET/exerGET_01/exerIndexGET_01.html
+++ b/aula_04/exerGET/exerGET_01/exerIndexGET_01.html
@@ -15,9 +15,9 @@ todos numéricos</h4>
     <form action="exerProcessGET_01.php" method="GET">
         <h1>Formulário</h1>
         <p>Digite o nome do estudante: <input type="text" name="cxnome" id="" required> </p>
-        <p>Digite a Primeira nota: <input type="text" name="cxnota01" id="" min="1" max="10" required> </p>
-        <p>Digite a Segunda nota: <input type="text" name="cxnota02" id="" min="1" max="10" required> </p>
-        <p>Digite a Terceira nota: <input type="text" name="cxnota03" id="" min="1" max="10" required> </p>
+        <p>Digite a Primeira nota: <input type="number" name="cxnota01" id="" min="0" max="10" required> </p>
+        <p>Digite a Segunda nota: <input type="number" name="cxnota02" id="" min="0" max="10" required> </p>
+        <p>Digite a Terceira nota: <input type="number" name="cxnota03" id="1" min="0" max="10" required> </p>
         <input type="submit" value="Enviar">
     </form>
 </body>
