--- a/aula_04/exerGET/exerGET_02/exerIndexGET_02.html
+++ b/aula_04/exerGET/exerGET_02/exerIndexGET_02.html
@@ -13,9 +13,9 @@ todos os campos.</h3>
 <body>
     <form action="exerProcessGET_02.php" method="GET">
         <h1>Formulário</h1>
-        <p>Digite um número: <input type="text" name="cxnum01" id="" required> </p>
-        <p>Digite outro número: <input type="text" name="cxnum02" id="" required> </p>
-        <p>Digite mais um número: <input type="text" name="cxnum03" id="" required> </p>
+        <p>Digite um número: <input type="number" name="cxnum01" id="" required> </p>
+        <p>Digite outro número: <input type="number" name="cxnum02" id="" required> </p>
+        <p>Digite mais um número: <input type="number" name="cxnum03" id="" required> </p>
         <input type="submit" value="Enviar">
     </form>
 </body>
