--- a/aula_12/Exer/index.html
+++ b/aula_12/Exer/index.html
@@ -11,8 +11,8 @@
 
     <form action="exProdutos.php" method="post">
         <p><input type="text" name="nome" placeholder="Nome" required></p>
-        <p><input type="number" name="valor" placeholder="Preço" required></p>
-        <p><input type="number" name="quant" min="0" placeholder="Quantidade" required></p>
+        <p><input type="number" name="valor" placeholder="Preço"></p>
+        <p><input type="number" name="quant" min="0" placeholder="Quantidade"></p>
         <p><input type="submit" value="Enviar"></p>
     </form>
 </body>
